--- a/streamlit_config.toml
+++ b/streamlit_config.toml
@@ -2,9 +2,12 @@
 headless = true
 address = "0.0.0.0"
 port = 5000
-
+enableCORS = false
+port = 8501
 [theme]
 primaryColor = "#1f77b4"
 backgroundColor = "#ffffff"
 secondaryBackgroundColor = "#f0f2f6"
 textColor = "#262730"
+[browser]
+gatherUsageStats = false
